# sayanbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  bot.py  db.py  docker-compose.yaml  env.example  logger.py  main.py  mongo_ski_resort_dump  pyproject.toml  requirements.txt  service.py  setup.cfg  text_db.py  titles.py  utils.py
.github/: dependabot.yml
.github/workflows/: main.yml
bot/: common.py  markups.py
bot/handlers/: core.py  exceptions.py  get_track.py  info.py  main.py  save_track.py  track.py  weather.py
db/: mongo.py
schema/: resort.py  weather.py
schemes/: resort.py  track.py  weather.py
store/: mongo.py
utils/: weather.py
utils/weather/: providers.py  weather.py
