[project]
name = "sayanbot"
version = "0.1.0"
description = "Telegram bot with useful information for riders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==2.24",
    "aiohttp==3.8.3 ; python_full_version >= '3.6'",
    "aiosignal==1.3.1 ; python_full_version >= '3.7'",
    "async-timeout==4.0.2 ; python_full_version >= '3.6'",
    "attrs==22.2.0 ; python_full_version >= '3.6'",
    "babel==2.9.1 ; python_full_version >= '2.7'",
    "certifi==2022.12.7 ; python_full_version >= '3.6'",
    "charset-normalizer==2.1.1 ; python_full_version >= '3.6'",
    "dnspython==2.3.0 ; python_full_version >= '3.7' and python_full_version < '4'",
    "frozenlist==1.3.3 ; python_full_version >= '3.7'",
    "idna==3.10 ; python_full_version >= '3.5'",
    "magic-filter==1.0.9 ; python_full_version >= '3.7' and python_full_version < '4'",
    "motor==3.1.1",
    "multidict==6.0.4 ; python_full_version >= '3.7'",
    "pydantic==1.10.4",
    "pymongo==4.3.3 ; python_full_version >= '3.7'",
    "python-dotenv==0.21.1",
    "python-jsonrpc-server==0.4.0",
    "pytz==2022.7.1",
    "setuptools>=80.9.0",
    "typing-extensions==4.4.0 ; python_full_version >= '3.7'",
    "ujson==5.7.0 ; python_full_version >= '3.7'",
    "yarl==1.8.2 ; python_full_version >= '3.7'",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 80
lint.select = [
    "E",  # Проверяем ошибки, связанные с соблюдением стандартов PEP 8.
    "F",  # Проверяем ошибки Python, такие как неиспользуемые переменные или импорты.
    "W",  # Проверяем предупреждения, касающиеся плохих практик.
    "I",  # Проверяем упорядоченность импортов.
    "S",  # Проверяем уязвимости безопасности в коде.
    "A",  # Проверяем использование built-in в качестве переменных.
    "T",  # Проверяем наличие TODO-заметок в коде.
    "G",  # Проверяем логгирование.
    "C",  # Проверяем структурные проблемы и стиль написания кода.
    "PIE",  # Проверяем дополнительные правила Python Enhancement Ideas.
    "R",  # Проверяем код на необходимость рефакторинга.
    "PT",  # Проверяем специфичные для Pytest правила.
    "SIM",  # Проверяем возможности упрощения сложных конструкций.
    "N",  # Проверяем соответствие именования переменных стандартам.
    "Q",  # Проверяем правильность использования кавычек.
    "ERA", # Запрещаем оставлять закомментированный код
]
lint.ignore = [
    "RET503",
    "T201"
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
